xrandr: explicitly set clone state variable when generating monitor configs

Each potential monitor configuration that can be cycled through with
fn-f7 on laptops is generated by copying and tweaking the current
monitor configuration.

One necessary, but neglected tweak, was the current "clone" state.  This
means the clone state of the current configuration leaks into every
other config. Users who start in a cloned mode can never leave a clone
with the hotkey.

This commit explicitly sets the clone state appropriately.

Patch based on valuable, and detailed feedback provided by Marico Xu.

https://bugzilla.gnome.org/show_bug.cgi?id=677472